--- a/Project.ipynb
+++ b/Project.ipynb
@@ -3,7 +3,12 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": [
+        "Q7t9ToMqoi3w",
+        "UT6tW9xFof1w",
+        "YoTh89NmopE_"
+      ]
     },
     "kernelspec": {
       "name": "python3",
@@ -1471,7 +1476,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Duplicated values"
+        "### Duplicated rows"
       ],
       "metadata": {
         "id": "UT6tW9xFof1w"
