--- a/Project.ipynb
+++ b/Project.ipynb
@@ -1413,63 +1413,26 @@
     {
       "cell_type": "code",
       "source": [
-        "dataset.isnull().sum()"
+        "dataset.isnull().sum().sum()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZLu9uBwHOdn5",
-        "outputId": "c7868883-0a4e-464a-dabe-c7b3d094a140"
+        "outputId": "e929f934-d9e3-401b-9e64-a8908121dbb0"
       },
-      "execution_count": 7,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "Marital status                                    0\n",
-              "Application mode                                  0\n",
-              "Application order                                 0\n",
-              "Course                                            0\n",
-              "Daytime/evening attendance\\t                      0\n",
-              "Previous qualification                            0\n",
-              "Previous qualification (grade)                    0\n",
-              "Nacionality                                       0\n",
-              "Mother's qualification                            0\n",
-              "Father's qualification                            0\n",
-              "Mother's occupation                               0\n",
-              "Father's occupation                               0\n",
-              "Admission grade                                   0\n",
-              "Displaced                                         0\n",
-              "Educational special needs                         0\n",
-              "Debtor                                            0\n",
-              "Tuition fees up to date                           0\n",
-              "Gender                                            0\n",
-              "Scholarship holder                                0\n",
-              "Age at enrollment                                 0\n",
-              "International                                     0\n",
-              "Curricular units 1st sem (credited)               0\n",
-              "Curricular units 1st sem (enrolled)               0\n",
-              "Curricular units 1st sem (evaluations)            0\n",
-              "Curricular units 1st sem (approved)               0\n",
-              "Curricular units 1st sem (grade)                  0\n",
-              "Curricular units 1st sem (without evaluations)    0\n",
-              "Curricular units 2nd sem (credited)               0\n",
-              "Curricular units 2nd sem (enrolled)               0\n",
-              "Curricular units 2nd sem (evaluations)            0\n",
-              "Curricular units 2nd sem (approved)               0\n",
-              "Curricular units 2nd sem (grade)                  0\n",
-              "Curricular units 2nd sem (without evaluations)    0\n",
-              "Unemployment rate                                 0\n",
-              "Inflation rate                                    0\n",
-              "GDP                                               0\n",
-              "Target                                            0\n",
-              "dtype: int64"
+              "0"
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 49
         }
       ]
     },
